2001-06-23  Ryan Nunn <triforce@merlin.net.au>
	* actors.cc, actors.h: Almost complete rewrite of the add_readied and
	  get_best_spot functions to make them cleaner and to remove all bugs.

2001-06-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* mapedit/u7shp.c: disabled debugging messages
	* data/bg/amulets.shp, Paperdoll_gump_info.cc: added FoV amulets

2001-06-22  Ryan Nunn <triforce@merlin.net.au>
	* actors.cc: Fixing a variety of bugs to do the add_readied code. 
	* gumps/Paperdoll_gump.cc: Fixed problem with items being hidden in BG
	  when using Paperdoll.
	* gumps/Paperdoll_gump.h, gumps/Paperdoll_gump_info.cc: Changes for
	  Musket.
	* actorio.cc, actors.h, gamewin.cc, objs/contain.h, objs/objs.h:
	  Changes to ensure that items are placed in the correct slots when
	  restoring a game. This was done by writing a 2 byte index id that is
	  read/written before the item. The id contains the slot number the
	  item goes it. New savegames will be backward compatible, but will
	  produce warning messages on earlier versions.

2001-06-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/expack.cc: allow NULL entries
	* keys.cc, ??game.cc, exult.cc, */defaultkeys.txt, */flx.in:
	moved defaultkeys.txt to exult_bg/si.flx instead of exult.flx

2001-06-21  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* path.cc: fixed memory leaks from A* pathfinder

2001-06-21  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc: Added (and implemented a few) path types in
	Patrol_schedule.
	* Watch for failed allocation in Timidity driver.

2001-06-19  Jeff Freedman  <jeff@amy.nerble.net>

	* Spellbook_gump.cc:  Added SI reagants table (untested).

2001-06-18  Max Horn  <max@quendi.de>
	* files/listfiles.cc: changed interface of U7ListFiles and removed U7FreeFileList;
	  implemented MacOS version of U7ListFiles
	* gumps/Newfile_gump.cc: std:: namespace police; applied changes to match new interface of U7ListFiles