@@ -153,7 +153,7 @@
 	USECODE_INTRINSIC_PTR(get_dead_party),	// 0x93
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x94    SetupOrrery (ucdump.c)
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x95
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x96
+	USECODE_INTRINSIC_PTR(a_or_an),	// 0x96
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x97
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x98
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x99
